# glue-heatmap

./: .gitignore  CHANGES.md  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci_workflows.yml
glue_heatmap/: __init__.py  coords.py  data.py  layer_artist.py  menubar_plugin.py  run_sample.py  setup.cfg  state.py  viewer.py
glue_heatmap/glue_heatmap/: layer_artist.py
glue_heatmap/qt/: __init__.py  cluster_tool.py  data_viewer.py  extract_to_matrix.py  extract_to_matrix.ui  layer_style_editor.py  layer_style_editor.ui  layer_style_editor_subset.py  options_widget.py  options_widget.ui  subset_to_data.ui  subset_tool.py
glue_heatmap/qt/tests/: test_heatmap.py
