[metadata]
name = glue-heatmap
url = https://www.gluesolutions.io
author = glue solutions, inc.
author_email = jfoster@gluesolutions.io
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: BSD License
description = A Heatmap viewer
long_description = file: README.md
long_description_content_type= text/markdown

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    seaborn>=0.11
    fastcluster>=1.2
    
[options.entry_points]
glue.plugins =
    glue_heatmap = glue_heatmap.qt:setup

[options.extras_require]
test =
    pytest
    pytest-qt
    pytest-faulthandler
    mock
qt =
    PyQt5>=5.9
glue = 
    glue-core


[options.package_data]
* = *.png, *.ui, *.glu, *.hdf5, *.fits, *.xlsx, *.txt, *.csv, *.svg, *.vot, *.bgz, *.tbi
